sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: ')' expected but '}' found.
 	}
        ^AlgBubbleSort1:16: error: Missing closing brace `}' assumed here
 Pour tout i dans [0,lgr-2]
 ^AlgBubbleSort1:17: error: '(' expected but ';' found.
          Si les cases i et i+1 doivent être inversées, le faire
^AlgBubbleSort1:17: error: ';' expected but ',' found.
          Si les cases i et i+1 doivent être inversées, le faire
                                                      ^