sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
}
 var i=0
 var j=0
 
 do {
 	
 
 	for {i<- 1 to getNombreValeurs() -2
 		if (plusPetit 
 	}
 
 
 
 Pour tout i dans [0,lgr-2]
          Si les cases i et i+1 doivent être inversées, le faire
     tant qu'on a inverser des choses lors du dernier parcours